--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 file.server.url=http://localhost:8081/upload
 # \u5185\u5D4C Elasticsearch \u5B9E\u4F8B\u3002\u9ED8\u8BA4\u5B58\u50A8\u4F4D\u7F6E\u662F\u5DE5\u4F5C\u76EE\u5F55\u7684 elastic \u76EE\u5F55 (\u6D4B\u8BD5\u7528)
-#spring.data.elasticsearch.properties.path.home=target/elastic
+spring.data.elasticsearch.properties.path.home=target/elastic
 # \u8FDC\u7A0B\u670D\u52A1
 spring.data.elasticsearch.cluster-nodes=localhost:9300
 # \u8BBE\u7F6E\u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4
