1修改端口号 2修改点赞逻辑 3修改浏览量的逻辑 4增加redis

--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,11 @@ dependencies {
     // 添加  Spring Data Elasticsearch 的依赖
     compile('org.springframework.boot:spring-boot-starter-data-elasticsearch')
 
+    // 添加  Spring Data Redis 的依赖
+    compile('org.springframework.boot:spring-boot-starter-data-redis')
+
+    // 添加 Spring Data Mongodb 的依赖
+    compile('org.springframework.boot:spring-boot-starter-data-mongodb')
     // 添加  JNA 的依赖
     compile('net.java.dev.jna:jna:4.3.0')
 
