--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=80
 debug=false
 # THYMELEAF
 spring.thymeleaf.encoding=UTF-8
@@ -14,10 +14,29 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-file.server.url=http://localhost:8081/upload
+#file.server.url=http://localhost:8081/upload
+file.server.url=http://localhost:80/upload
 # \u5185\u5D4C Elasticsearch \u5B9E\u4F8B\u3002\u9ED8\u8BA4\u5B58\u50A8\u4F4D\u7F6E\u662F\u5DE5\u4F5C\u76EE\u5F55\u7684 elastic \u76EE\u5F55 (\u6D4B\u8BD5\u7528)
 spring.data.elasticsearch.properties.path.home=target/elastic
 # \u8FDC\u7A0B\u670D\u52A1
 spring.data.elasticsearch.cluster-nodes=localhost:9300
 # \u8BBE\u7F6E\u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4
 spring.data.elasticsearch.properties.transport.tcp.connect_timeout=120s
+
+# redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.timeout=5000
+#spring.redis.jedis.pool.max-active=8
+#spring.redis.jedis.pool.max-wait=-1ms
+#spring.redis.jedis.pool.max-idle=8
+#spring.redis.jedis.pool.min-idle=0
+
+# mongodb
+# limit upload file size
+spring.servlet.multipart.max-file-size=2048KB
+spring.servlet.multipart.max-request-size=2048KB
+# independent MongoDB server
+spring.data.mongodb.uri=mongodb://localhost:27017/blogFile
+
